Only use link color on elements with 'href', plus some cleanup

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -55,10 +55,10 @@
   a {
     text-decoration: none;
 
-    &:hover {
+    &[href]:hover {
       text-decoration: underline;
     }
-    &:visited {
+    &[href]:visited {
       color: var(--color-visited-link);
     }
   }
