Introduce landing page and card shortcode

--- a/assets/_defaults.scss
+++ b/assets/_defaults.scss
@@ -28,9 +28,9 @@ $hint-colors: (
   warning: #f59e42,
   danger: #d84747,
 
-  note: #64748b,
+  note: #4486dd,
   tip: #3bad3b,
-  important: #4486dd,
+  important: #8144dd,
   caution: #d84747
 ) !default;
 
