--- a/layouts/_shortcodes/mermaid.html
+++ b/layouts/_shortcodes/mermaid.html
@@ -8,5 +8,5 @@
 {{ end }}
 
 <pre class="mermaid{{ with .Get "class" }} {{ . }}{{ end }}">
-  {{- .Inner -}}
+  {{- .Inner | htmlEscape | safeHTML  -}}
 </pre>
