#753, fix url cleaning for git urls

--- a/layouts/_partials/docs/links/edit.html
+++ b/layouts/_partials/docs/links/edit.html
@@ -2,4 +2,4 @@
   "Site" .Site
   "Page" .Page
   "Path" (strings.TrimPrefix hugo.WorkingDir .Page.File.Filename)
-)) | path.Clean) -}}
+)) | urls.JoinPath) -}}
