Remove unnecessary 'important' in styles

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -354,7 +354,7 @@ body[dir="rtl"] .book-menu {
   }
 
   .book-header {
-    display: block !important;
+    display: block;
   }
 
   #menu-control:focus ~ main label[for="menu-control"] {
