#757, show landing page menu based of page layout

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -226,7 +226,7 @@ body[dir="rtl"] .book-menu {
   }
 }
 
-.book-kind-home .book-header {
+.book-layout-landing .book-header {
   display: block;
 }
 
