--- a/layouts/_shortcodes/card.html
+++ b/layouts/_shortcodes/card.html
@@ -1,17 +1,19 @@
 {{- /* remove whitespace */ -}}
-{{- if .Get "href" -}}
-<a class="book-card{{ with .Get "class" }} {{ . }}{{ end }}"{{ with .Get "href" }} href="{{ . | relURL }}"{{ end }}>
-{{- template "book-card-content" . -}}
+{{- with .Get "href" -}}
+{{- $destination := partial "docs/links/portable-link" (dict "Page" $.Page "Destination" .) -}}
+<a class="book-card{{ with $.Get "class" }} {{ . }}{{ end }}" href="{{ $destination | safeURL }}">
+{{- template "book-card-content" $ -}}
 </a>
 {{- else -}}
 <div class="book-card{{ with .Get "class" }} {{ . }}{{ end }}">
-{{- template "book-card-content" . -}}
+{{- template "book-card-content" $ -}}
 </div>
 {{- end -}}
 
 {{- define "book-card-content" -}}
 {{- with .Get "image" -}}
-  <img src="{{ . | urls.RelLangURL }}" />
+  {{- $destination := partial "docs/links/portable-image" (dict "Page" $.Page "Destination" .) -}}
+  <img src="{{ $destination | safeURL }}" />
 {{- end }}
   <div class="markdown-inner">
   {{ with .InnerDeindent }}{{ . }}{{ end }}
