Update visited link color, set same level of darkness as regular link

--- a/assets/_defaults.scss
+++ b/assets/_defaults.scss
@@ -41,7 +41,7 @@ $hint-colors: (
   --gray-500: #adb5bd;
 
   --color-link: #0055bb;
-  --color-visited-link: #8440f1;
+  --color-visited-link: #5500bb;
 
   --body-background: white;
   --body-font-color: black;
