Make sure ToC is showed in terms, set bookToC to be none by default

--- a/layouts/_partials/docs/toc-show.html
+++ b/layouts/_partials/docs/toc-show.html
@@ -1,4 +1,4 @@
-{{ return and
-    (default .Site.Params.BookToC .Params.BookToC | default true)
-    (not (eq .TableOfContents "<nav id=\"TableOfContents\"></nav>"))
+{{ return default
+  (not (eq .TableOfContents "<nav id=\"TableOfContents\"></nav>"))
+  (default .Site.Params.BookToC .Params.BookToC)
 }}
