--- a/layouts/term.html
+++ b/layouts/term.html
@@ -5,13 +5,21 @@
       <a href="{{ .RelPermalink }}">{{ partial "docs/title.html" . }}</a>
     </h2>
     {{ partial "docs/post-meta" . }}
-    <p>
+    <div class="book-post-content">
       {{- .Summary -}}
-    </p>
+    </div>
   </article>
   {{ end }}
 
   {{ template "_internal/pagination.html" . }}
+{{ end }}
+
+{{ define "toc-container" }}
+<aside class="book-toc">
+  <div class="book-toc-content">
+    {{ template "toc" . }}
+  </div>
+</aside>
 {{ end }}
 
 {{ define "toc" }}
