--- a/layouts/_partials/docs/prev-next.html
+++ b/layouts/_partials/docs/prev-next.html
@@ -12,7 +12,7 @@
   <div class="flex flex-wrap justify-between">
     <span>
     {{ with $prev }}
-      <a href="{{ .RelPermalink }}" class="flex align-center book-icon">
+      <a href="{{ .RelPermalink }}" class="flex align-center">
         <img src="{{ "svg/backward.svg" | relURL }}" class="book-icon" alt="Previous" title="{{ partial "docs/title" . }}" />
         <span>{{ partial "docs/title" . }}</span>
       </a>
@@ -20,7 +20,7 @@
     </span>
     <span>
     {{ with $next }}
-      <a href="{{ .RelPermalink }}" class="flex align-center book-icon">
+      <a href="{{ .RelPermalink }}" class="flex align-center">
         <span>{{ partial "docs/title" . }}</span>
         <img src="{{ "svg/forward.svg" | relURL }}" class="book-icon" alt="Next" title="{{ partial "docs/title" . }}" />
       </a>
