--- a/assets/_shortcodes.scss
+++ b/assets/_shortcodes.scss
@@ -210,7 +210,7 @@
       background: var(--gray-100);
     }
 
-    img {
+    > img {
       width: 100%;
       display: block;
       aspect-ratio: 4 / 3;
