--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,17 +1,25 @@
 {{ define "main" }}
   {{ range sort .Paginator.Pages }}
-  <article class="markdown book-post">
+  <article class="book-post markdown">
     <h2>
-      <a href="{{ .RelPermalink }}">{{ partial "docs/title.html" . }}</a>
+      <a href="{{ .RelPermalink }}">{{ partial "docs/title" . }}</a>
     </h2>
-    {{ partial "docs/post-meta" . }}
-    <div class="book-post-content">
-      {{- .Summary -}}
+    <div class="book-post-container flex gap">
+      <div>
+        {{ partial "docs/post-meta" . }}
+        <div class="book-post-content markdown-inner">
+          {{- .Summary | truncate 256 -}}
+        </div>
+      </div>
+      {{- $thumbnail := default "thumbnail.*" .Params.BookPostThumbnail -}}
+      {{- with or (.Resources.GetMatch $thumbnail) (resources.GetMatch $thumbnail) -}}
+      <div class="book-post-thumbnail">
+        <img src="{{ .RelPermalink }}" />
+      </div>
+      {{- end -}}
     </div>
   </article>
   {{ end }}
-
-  {{ template "_internal/pagination.html" . }}
 {{ end }}
 
 {{ define "toc-container" }}
@@ -24,4 +32,8 @@
 
 {{ define "toc" }}
   {{ partial "docs/taxonomy" . }}
+{{ end }}
+
+{{ define "footer" }}
+  {{ partial "docs/pagination.html" . }}
 {{ end }}
