--- a/layouts/_partials/docs/post-prev-next.html
+++ b/layouts/_partials/docs/post-prev-next.html
@@ -1,18 +1,18 @@
 <div class="flex flex-wrap justify-between">
-  <span>
+  <div>
   {{ with .NextInSection }}
     <a href="{{ .RelPermalink }}" class="flex align-center">
       <img src="{{ "svg/backward.svg" | relURL }}" class="book-icon" alt="Previous" title="{{ partial "docs/title" . }}" />
       <span>{{ partial "docs/title" . }}</span>
     </a>
   {{ end }}
-  </span>
-  <span>
+  </div>
+  <div>
   {{ with .PrevInSection }}
     <a href="{{ .RelPermalink }}" class="flex align-center">
       <span>{{ partial "docs/title" . }}</span>
       <img src="{{ "svg/forward.svg" | relURL }}" class="book-icon" alt="Next" title="{{ partial "docs/title" . }}" />
     </a>
   {{ end }}
-  </span>
+  </div>
 </div>
