Remove figure support form card shortcode styles

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -198,6 +198,11 @@
 
   figure {
     margin: $padding-16 0;
+
+    figcaption {
+      @extend .markdown-inner;
+      margin-top: $padding-16;
+    }
   }
 }
 
