--- a/layouts/_partials/docs/post-meta.html
+++ b/layouts/_partials/docs/post-meta.html
@@ -1,6 +1,6 @@
 {{ with .Date }}
   <div class="flex align-center text-small book-post-date">
-    <img src="{{ "svg/calendar.svg" | relURL }}" class="book-icon" alt="" />
+    <img src="{{ partial "docs/icon" "calendar" }}" class="book-icon" alt="" />
     <span>{{ partial "docs/date" (dict "Date" . "Format" $.Site.Params.BookDateFormat) }}</span>
   </div>
 {{ end }}
