--- a/layouts/_markup/render-heading.html
+++ b/layouts/_markup/render-heading.html
@@ -1,6 +1,6 @@
-<h{{ .Level }} id="{{ .Anchor }}" {{- with .Attributes.class }} class="{{ . }}" {{- end }}>
-  {{ .Text }}
-  {{ if default true .Page.Params.bookHeadingAnchor }}
+<h{{ .Level }} id="{{ .Anchor }}" {{- with .Attributes.class -}}class="{{ . }}"{{- end -}}>
+  {{- .Text -}}
+  {{- if default true .Attributes.anchor }}
   <a class="anchor" href="#{{ .Anchor }}">#</a>
-  {{ end }}
+  {{- end -}}
 </h{{ .Level }}>
