#762, bring back markdown rendering to details shortcode summary

--- a/layouts/_shortcodes/details.html
+++ b/layouts/_shortcodes/details.html
@@ -1,6 +1,6 @@
 <details {{ if or (.Get "open") (in .Params "open") }}open{{ end }}>
   {{- $summary := cond .IsNamedParams (.Get "title") (.Get 0) -}}
-  <summary>{{ $summary }}</summary>
+  <summary>{{ $summary | .Page.RenderString }}</summary>
   <div class="markdown-inner">
     {{ .InnerDeindent | safeHTML }}
   </div>
