Go back to inline links for now, add menu backgroudn color only on mobile view

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -26,7 +26,6 @@ h6 {
 }
 
 a {
-  display: inline-flex;
   flex: auto;
   align-items: center;
   gap: .5em;
@@ -113,7 +112,6 @@ a .book-icon {
   .book-menu-content {
     width: $menu-width;
     padding: $padding-16;
-    background: var(--body-background);
 
     @include fixed;
   }
@@ -358,6 +356,10 @@ body[dir="rtl"] .book-menu {
     visibility: hidden;
     margin-inline-start: -$menu-width;
     z-index: 1;
+
+    .book-menu-content {
+      background: var(--body-background);
+    }
   }
 
   .book-toc {
