Review and update whitespaces in shortcodes to improve shortcode nesting

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -24,6 +24,7 @@
       font-size: 0.75em;
       vertical-align: middle;
       text-decoration: none;
+      margin-inline-start: .25em;
     }
 
     &:hover a.anchor,
