--- a/layouts/_shortcodes/badge.html
+++ b/layouts/_shortcodes/badge.html
@@ -1,5 +1,6 @@
 {{- $style := default "default" (.Get "style") -}}
 <span class="book-badge {{ $style }}">
-  {{- with .Get "title" }}<span class="book-badge-title">{{ . | plainify }}</span>{{ end -}}
-  {{- with .Get "value" }}<span class="book-badge-value">{{ . | plainify }}</span>{{ end -}}
+  {{- with .Get "title" -}}<span class="book-badge-title">{{ . | plainify }}</span>{{- end -}}
+  {{- with .Get "value" -}}<span class="book-badge-value">{{ . | plainify }}</span>{{- end -}}
 </span>
+{{- /* remove whitespaces */ -}}
