--- a/layouts/_shortcodes/hint.html
+++ b/layouts/_shortcodes/hint.html
@@ -1,3 +1,5 @@
+{{- /* remove whitespaces */ -}}
 <blockquote class="book-hint {{ default "default" (.Get 0) }}">
-  {{ .Inner | safeHTML }}
+{{ .Inner | safeHTML -}}
 </blockquote>
+{{- /* remove whitespaces */ -}}
