--- a/layouts/_shortcodes/steps.html
+++ b/layouts/_shortcodes/steps.html
@@ -1,3 +1,5 @@
+{{- /* remove whitespaces */ -}}
 <div class="book-steps {{ with .Get "class" }}{{ . }}{{ end }}">
-  {{ .Inner }}
+{{ .Inner -}}
 </div>
+{{- /* remove whitespaces */ -}}
